# Rain-Anim

./: CMakeLists.txt  Makefile  README.md  build.sh  shell.nix
include/: shader.hpp
src/: main.cpp
src/shaders/: shader.frag  shader.vert
